added html and content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,64 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <h1>Johnathan Hambleton</h1>
+<h2>objective</h2>
+<div>Gain meaningful employment that will further my skill set and allow my family to grow</div>
+
+<h2>Education</h2>
+<section class="school1, education"></section>
+<div></div>
+<section class="school2, education"></section>
+<div>08/2006-05/2012</div>
+237 W 100 N Brigham City, UT 84302. Phone: 435-230-4294. Email: john.d.hambleton@gmail.com
+Johnathan Hambleton
+Objective
+Gain meaningful employment that will further my skill set and allow my family to grow. 
+
+Education
+
+02/2020 - Current                                   Lambda
+08/2006 – 05/2012                                   Utah State University                                                        Logan, UT
+
+Bachelor of Science in Aviation Technology-Maintenance Management 
+Graduation Date: May 2012
+<ul>
+  <li>Major: Aviation Technology Maintenance Management</li> 
+  <li>Minor: Management </li>
+  <li>Airframe and Powerplant License</li>
+</ul>
+
+Experience
+02/2015-04/2019	First Student	Ogden, UT
+School Bus Driver
+§	Perform routine pre-trip inspections and ensure safety of the bus.
+§	Operate bus in safe manner providing home to school transportation for school children.
+§	Maintain safe control of bus while monitoring student activity and address all problem behavior.
+§	Acquired skills: Creating professional and caring relationship with school age children.
+
+
+01/2013-01/2015	Skywest Airlines	SLC, UT
+Aviation Maintenance Specialist 
+§	Perform routine aircraft inspections on CRJ 200, 700 and 900 commercial jets.
+§	Conduct aircraft maintenance, including: engine, hydraulic, structural, and electrical repairs.  
+§	Acquired skills: Run and taxi certification, attention-to-detail, professional conduct, consistency.
+
+
+04/2010-09/2011	Utah State University: Aviation Technology	Logan, UT
+Aviation Maintenance Technician 
+§	Assisted with 100 and 1000 hour aircraft inspections.
+§	Regularly completed and assisted-in aircraft maintenance, including: composite, engine, structural, and control surface repairs.
+§	Acquired skills: Interaction with pilots and addressing their concerns, balance speed with thoroughness 
+
+
+08/2007-04/2010	Utah State University: Parking and Transportation	Logan, UT
+Shuttle Driver
+§	Drove student buses on USU campus and to Brigham City.
+§	Acquired skills: patience, punctuality and attention to safety.
+
+References available upon request.
+
+
+  
 </body>
 </html>
