working on html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>My Resume</title>
+  <title>John Hambleton's Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -15,6 +16,7 @@
 </head>
 
 <body>
+  <!-- START OF HEADER -->
   <header>
     <nav>
       <a href="#" target="_blank">Home</a>
@@ -23,16 +25,37 @@
       <a href="#" target="_blank">Contact</a>
     </nav>
     <h1>Johnathan Hambleton</h1>
+    <div>
+      <h2>
+        Intro
+      </h2>
+      <span> Some intro stuff about me</span>
+      <h2>
+      Stuff you want me on your team for, aka Skills:
+      </h2>
+      <ul>
+        <li>skill</li>
+        <li>skill</li>
+        <li>skill</li>
+      </ul>
+    </div>
+    
+    <div>
+    <h2>Objective</h2>
+    <span>Gain meaningful employment that will further my skill set and allow my family to grow</span>  
+    </div>
   </header>
-  <h2>objective</h2>
-  <div>Gain meaningful employment that will further my skill set and allow my family to grow</div>
 
+<!-- START OF EDUCCATION -->
   <h2>Education</h2>
   <section class="school1, education"></section>
   <div></div>
   <section class="school2, education"></section>
   <div>08/2006-05/2012</div>
-  238 N 200 W Tremonton, UT 84337. Phone: 435-230-4294. Email: john.d.hambleton@gmail.com
+  <Contact>
+
+    238 N 200 W Tremonton, UT 84337. Phone: 435-230-4294. Email: john.d.hambleton@gmail.com
+  </Contact>
 
   Objective
   Gain meaningful employment that will further my skill set and allow my family to grow.
@@ -49,7 +72,7 @@
     <li>Minor: Management </li>
     <li>Airframe and Powerplant License</li>
   </ul>
-
+<!-- START OF EXPERIENCE  -->
   Experience
   02/2015-04/2019 First Student Ogden, UT
   School Bus Driver
@@ -79,7 +102,6 @@
   § Drove student buses on USU campus and to Brigham City.
   § Acquired skills: patience, punctuality and attention to safety.
 
-  References available upon request.
 
 
 
