more html and content chages

--- a/index.html
+++ b/index.html
@@ -24,83 +24,97 @@
       <a href="https://jhportfolio.netlify.com/" target="_blank">Portfollio</a>
       <a href="#" target="_blank">Contact</a>
     </nav>
-    <h1>Johnathan Hambleton</h1>
+    <h1>
+      Johnathan Hambleton
+    </h1>
+        <h2>
+          238 N 200 W Tremonton,UT 84337 <br>
+          Phone: 435-230-4294.<br>
+          Email: john.d.hambleton@gmail.com
+        </h2>
     <div>
       <h2>
         Intro
+        <span> Some intro stuff about me</span>
       </h2>
-      <span> Some intro stuff about me</span>
       <h2>
-      Stuff you want me on your team for, aka Skills:
+        Stuff you want me on your team for, aka Skills:
       </h2>
       <ul>
         <li>skill</li>
         <li>skill</li>
         <li>skill</li>
       </ul>
+
     </div>
-    
+
     <div>
-    <h2>Objective</h2>
-    <span>Gain meaningful employment that will further my skill set and allow my family to grow</span>  
+      <h2>Objective</h2>
+      <span>Gain meaningful employment that will further my skill set and allow my family to grow</span>
     </div>
   </header>
 
-<!-- START OF EDUCCATION -->
-  <h2>Education</h2>
-  <section class="school1, education"></section>
-  <div></div>
-  <section class="school2, education"></section>
-  <div>08/2006-05/2012</div>
-  <Contact>
-
-    238 N 200 W Tremonton, UT 84337. Phone: 435-230-4294. Email: john.d.hambleton@gmail.com
-  </Contact>
-
-  Objective
-  Gain meaningful employment that will further my skill set and allow my family to grow.
-
-  Education
-
-  02/2020 - Current Lambda
-  08/2006 – 05/2012 Utah State University Logan, UT
-
-  Bachelor of Science in Aviation Technology-Maintenance Management
-  Graduation Date: May 2012
-  <ul>
-    <li>Major: Aviation Technology Maintenance Management</li>
-    <li>Minor: Management </li>
-    <li>Airframe and Powerplant License</li>
-  </ul>
-<!-- START OF EXPERIENCE  -->
-  Experience
-  02/2015-04/2019 First Student Ogden, UT
-  School Bus Driver
-  § Perform routine pre-trip inspections and ensure safety of the bus.
-  § Operate bus in safe manner providing home to school transportation for school children.
-  § Maintain safe control of bus while monitoring student activity and address all problem behavior.
-  § Acquired skills: Creating professional and caring relationship with school age children.
-
-
-  01/2013-01/2015 Skywest Airlines SLC, UT
-  Aviation Maintenance Specialist
-  § Perform routine aircraft inspections on CRJ 200, 700 and 900 commercial jets.
-  § Conduct aircraft maintenance, including: engine, hydraulic, structural, and electrical repairs.
-  § Acquired skills: Run and taxi certification, attention-to-detail, professional conduct, consistency.
-
-
-  04/2010-09/2011 Utah State University: Aviation Technology Logan, UT
-  Aviation Maintenance Technician
-  § Assisted with 100 and 1000 hour aircraft inspections.
-  § Regularly completed and assisted-in aircraft maintenance, including: composite, engine, structural, and control
-  surface repairs.
-  § Acquired skills: Interaction with pilots and addressing their concerns, balance speed with thoroughness
-
-
-  08/2007-04/2010 Utah State University: Parking and Transportation Logan, UT
-  Shuttle Driver
-  § Drove student buses on USU campus and to Brigham City.
-  § Acquired skills: patience, punctuality and attention to safety.
+  <!-- START OF EDUCCATION -->
+  <section class="education">
+    <h2>Education</h2>
+    <div class="school1">
+      02/2020 - Current Lambda
+    </div>
+    <div class="school2">
+      08/2006 – 05/2012 Utah State University
+    </div>
+    <h2>
+      Achivments
+    </h2>
+    Bachelor of Science in Aviation Technology-Maintenance Management
+    Graduation Date: May 2012
+    <ul>
+      <li>Major: Aviation Technology Maintenance Management</li>
+      <li>Minor: Management </li>
+      <li>Airframe and Powerplant License</li>
+    </ul>
+  </section>
+  <!-- START OF EXPERIENCE  -->
+  <section class="experience">
+    <h2>
+     Experience
+   </h2> 
+   <div>
+    06/2019-12/2019 Conservice Logan, UT
+    Meter Manager
+    Analyzed water meter fuctionality on large multi-family rental properties.
+    <li>Wrote repair service proposals for faulty equipment found, and submitted approvals to scheduling.</li>
+    <li>Communicated repair needs to property managers and answered all their questions</li>
+    <li>Acquired skills: .</li>
+  </div>
+   <div>
+     02/2015-04/2019 First Student Ogden, UT
+     School Bus Driver
+     § Perform routine pre-trip inspections and ensure safety of the bus.
+     § Operate bus in safe manner providing home to school transportation for school children.
+     § Maintain safe control of bus while monitoring student activity and address all problem behavior.
+     § Acquired skills: Creating professional and caring relationship with school age children.
+   </div>
+  
+  <div>
+    01/2013-01/2015 Skywest Airlines SLC, UT
+    Aviation Maintenance Specialist
+    § Perform routine aircraft inspections on CRJ 200, 700 and 900 commercial jets.
+    § Conduct aircraft maintenance, including: engine, hydraulic, structural, and electrical repairs.
+    § Acquired skills: Run and taxi certification, attention-to-detail, professional conduct, consistency.
+  </div>
+  
+  <div>
+    04/2010-09/2011 Utah State University: Aviation Technology Logan, UT
+    Aviation Maintenance Technician
+    § Assisted with 100 and 1000 hour aircraft inspections.
+    § Regularly completed and assisted-in aircraft maintenance, including: composite, engine, structural, and control
+    surface repairs.
+    § Acquired skills: Interaction with pilots and addressing their concerns, balance speed with thoroughness
+  </div>
+  
+ 
+  </section>
 
 
 
